# backend-handson-django

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  aaa.yaml  asdf.py  db.sqlite3  docker-compose.nexus.yaml  docker-compose.yaml  index.html  mkdocs.yml  mypy.ini  oracle_db.dockerfile  pyproject.toml  requ.txt  requirements.txt  setup.cfg
.github/workflows/: deploy-docs.yml  deploy.yaml  static.yml
aggregate/order/: models.py
aggregate/orders/: models.py
aggregate/product/: models.py
aggregate/products/: models.py  serializers.py
aggregate/store/: models.py
aggregate/stores/: apps.py  models.py  views.py
aggregate/user/: models.py  serializers.py
aggregate/users/: apps.py  models.py
apps/: manage.py  mypy_example.py
apps/authentication/: apps.py  models.py  serializers.py  tests.py  views.py
apps/config/: asgi.py  celery.py  custom_exceptions.py  schema.py  settings.py  urls.py  wsgi.py
apps/custom_oauth2/: admin.py  apps.py  authentication.py  core.py  external_apis.py  models.py  oauth2_validators.py  s3_custom_storage.py  utils.py
apps/django_app_name/: apps.py
apps/django_dynamodb/: apps.py  tests.py
apps/django_ninja_sample/: apps.py  views.py
apps/drf_example_app/: apps.py  models.py  schemas.py  serializers.py  views.py
apps/frontend_app/: apps.py  views.py
apps/frontend_demo/: apps.py  views.py
apps/ninja_example_app/: apps.py  schemas.py  sdf.py  views.py
apps/order_management/: apps.py
apps/orders/: models.py  serializers.py  views.py
apps/portfolio/: apps.py  views.py
apps/products/: models.py
apps/project_name/: apps.py  serializers.py
apps/sample_app/: admin.py  apps.py  serializers.py  tests.py
apps/store_management/: apps.py  views.py
apps/stores/: apps.py  serializers.py  views.py
apps/study_example_app/: admin.py  urls.py
apps/table_document_app/: apps.py  utils.py  views.py
apps/user_management/: schemas.py  serializers.py  tests.py  views.py
apps/users/: models.py  tasks.py  views.py
chapter1_app/: apps.py  serializers.py  views.py
config/: asgi.py  settings.py  urls.py
docker/: application.dockerfile  compose-dev.yaml  compose-local.yaml  compose.yaml  docker-compose.yaml  mysql.cnf
docs/: quickstart.md
docs/source/: conf.py  index.rst
frontend_app/: views.py
frontend_app/templates/: index.html
ninja_example_app/: schemas.py  views.py
portfolio/: views.py
quickstart/: index.html
search/: search_index.json
shopping_mall/: apps.py
shopping_mall/migrations/: 0001_initial.py  0002_auto_20210429_1852.py
shopping_mall/models/: __init__.py  orders.py  products.py  store.py  users.py
store_management/: apps.py
study_example_app/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
study_example_app/chapter_03_orm_queryset/: chapter_01_use_only_sql_example.py  chapter_03_use_django_query_example.py
study_example_app/chapter_04_serializer/: 00_serializing_only_python.py  01_serializing_dataclass_support.py  01_serializing_with_django.py
study_example_app/chapter_04_view/: chapter_00_tcp_server.py  chapter_01_tcp_server_but_it_can_read_http_url.py
study_example_app/chapter_05_view/: chapter_00_tcp_server.py  chapter_01_tcp_server_but_it_can_read_http_url.py  chapter_02_tcp_server_with_url_dispatcher.py  http_server_ver01_but_it_can_read_http_url.py  http_server_ver02_with_url_dispatcher.py
study_example_app/example_source_code/: example_with_django_orm.ipynb  example_without_django_orm.ipynb  no_django_orm_example.py  what_is_http_example.py  what_is_http_example2.py
study_example_app/migrations/: 0001_initial.py  0002_auto_20210428_2207.py  0002_exampleuser_aaa.py  0002_owner_restaurant.py  0003_auto_20210806_0214.py  0003_bmodel_b_masking_field.py  0003_company_department_employee.py  0004_amodel_a_masking_field.py  0004_exampleuser_bbb.py  0005_auto_20210806_0233.py  0005_exampleuser_a_model.py  0006_album_book_consumer_movie.py  0006_auto_20210806_0235.py  0007_auto_20210806_0236.py  0007_menu_restaurant2.py  0008_auto_20210214_0903.py  0008_exampleuser_ccc.py  0009_auto_20210214_0904.py  0009_auto_20210806_0239.py  0010_movie2.py  0011_auto_20210226_1104.py  0012_auto_20210226_1104.py  0013_delete_movie.py
study_example_app/models/: __init__.py  accounts.py  fields.py  file_field_example_models.py  n_plus_1_example_models.py  normal_field_example_models.py
study_example_app/serializers/: __init__.py  serializer_structure_analysis.py  validators.py
study_example_app/tests/: __init__.py  test_cipher_example.py  test_filter_example.py  test_n_plus_1_problem_example.py  test_queryset_expressions_example.py
study_example_app/views/: __init__.py  cbv_views.py  chapter_05_views_example_views.py  drf_spectacular_views.py  drf_views.py  example_views.py  fbv_views.py
study_example_snippet/chapter_03_orm_queryset/: chapter_01_use_only_sql_example.py  (+2 more)
user_management/: schemas.py  serializers.py  tests.py  views.py
users/: views.py
(+313 files in other folders)
