[tool.poetry]
name = "django_backend_starter_project"
version = "1.0.0"
description = "django backend starter project"
authors = ["SoungRyoul Kim <KimSoungRyoul@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11.0"

# django
django = "^4.2"
#channels = "^3.0.3"
django-extensions = "^3.2.3"

# mypy
mypy = "^1.2"
django-stubs = { extras = ["compatible-mypy"], version = "^4.2.0" }
django-stubs-ext = "^4.2.1"
boto3 = "^1.28.15"
pynamodb = "^5.5.0"




[tool.poetry.group.dev.dependencies]
ipython = "^8.3.0"
pre-commit = "^2.9.3"
Werkzeug = "^2.0.3"
black = "^23.3.0"


[tool.poetry.group.test.dependencies]
freezegun = "^1.2.2"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.1.17"
mkdocs-git-revision-date-localized-plugin = "^1.2.0"


[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'


[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]


[tool.django-stubs]
django_settings_module = "config.settings"
